adding ch 5 and 6

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -528,7 +528,7 @@ from effect decompositions \citep{PEARL1998}. ``Do'' operators could be used
 to predict changes in occupancy following a management intervention that
 reduces grazing intensity or removes fish. Indeed, this was one of the
 original arguments for the development of structural equation models in
-the mid-20th century \citep{Marschak, Koopmans}. Causal inferences
+the mid-20th century \citep{shipley2002cause}. Causal inferences
 drawn from such analyses can be no better than the validity of the
 assumptions used to construct the model, however. Processes that drive
 the species distributions can be represented best when there is
@@ -655,20 +655,6 @@ causal model may be tested directly. Compared to fields like sociology
 and economics, ecology as a field is perhaps in a unique position to
 reap benefits from SEM because it is both complex and relatively
 amenable to experimental manipulation.
-
-\section{Acknowledgements}
-
-This work used the Janus supercomputer, which is supported by the
-National Science Foundation (award number CNS-0821794) and the
-University of Colorado Boulder. The Janus supercomputer is a joint
-effort of the University of Colorado Boulder, the University of Colorado
-Denver and the National Center for Atmospheric Research. We thank Joseph
-Mihaljevic and Helen McCreery for comments on the manuscript. We also
-thank Travis McDevitt-Galles and Katherine Richgels for assistance in
-the field. This work was directly funded by grants from NSF
-(DEB-1311467, DEB-1149308, and DEB-0841758) and NIH (R01GM109499).
-Maxwell Joseph and Daniel Preston received support from the NSF Graduate
-Research Fellowship Program.
 
 \begin{figure}[htbp]
 \caption[Conceptual model showing influences on amphibian breeding success.]{
