--- a/main.tex
+++ b/main.tex
@@ -33,13 +33,15 @@
 \readerFive{Prof. Valerie McKenzie}
 
 \abstract{  \OnePageChapter	% because it is very short
-
-	Often the abstract will be long enough to require
-	more than one page, in which case the macro
-	``$\backslash$OnePageChapter'' should {\it not}
-	be used.
-
-	But this one isn't, so it should.
+This doctoral dissertation broadly aims to improve methods for understanding the occurrence of organisms in space and time, including organisms that cause disease.
+The processes that drive occurrence are often represented mathematically as ecological theories, which can be applied to uncover actionable insights into disease management.
+This was a focus of my first chapter which characterized the gap between disease ecology theory and infectious disease management.
+My second chapter focused on filling in a gap theoretically at the intersection of multi-host pathogens and host community disassembly.
+Specifically, I construct a theoretical model to evaluate disease consequences when hosts are extirpated according to a variety of rules predicted from community ecology.
+The third chapter develops a method to link representations of latent processes that drive species occurrence to observable (with error) data, with the goal of understanding multiple causal pathways in an occupancy model.
+The fourth also extends occupancy models, but to allow for multi-host multi-symbiont (parasites included) systems.
+Chapter five is somewhat different topically, focusing on missing species trait interpolation, but methodologically is not much of a departure, drawing on Bayesian hierarchical modeling as in the previous two chapters.
+The final chapter develops a theoretical model to generate predictions about the effect of host diversity on the diversity and transmission of symbiotic organisms.
 	}
 
 \dedication[Dedication]{	% NEVER use \OnePageChapter here.
@@ -47,9 +49,7 @@
 	}
 
 \acknowledgements{	\OnePageChapter	% *MUST* BE ONLY ONE PAGE!
-	Here's where you acknowledge folks who helped.
-	But keep it short, i.e., no more than one page,
-	as required by the Grad School Specifications.
+Forthcoming
 	}
 
 % \IRBprotocol{E927F29.001X}	% optional!
@@ -73,6 +73,8 @@
 \input chapter2.tex
 \input chapter3.tex
 \input chapter4.tex
+\input chapter5.tex
+\input chapter6.tex
 
 %%%%%%%%%   then the Bibliography, if any   %%%%%%%%%
 \bibliographystyle{apalike}	% or "siam", or "alpha", etc.
