including acknowledgements and fixing a chapterauthor issue in ch5

--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,5 +1,5 @@
 \chapter{Species trait prediction via phylogenetic latent factors}
-\chapterauthors{Maxwell B. Joseph, Kevin B. Knight, Pieter T. J. Johnson}
+\chapterauthor{Maxwell B. Joseph, Kevin B. Knight, Pieter T. J. Johnson}
 
 As trait-based approaches in ecology have gained momentum, efforts to assemble trait databases have increased the availability of trait data for many taxa.
 However, observations are often missing from these databases, and species with incomplete trait records may be excluded from analyses, thereby limiting the utility of trait-based approaches and potentially biasing subsequent inference.
