--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,59 @@ The final chapter develops a theoretical model to generate predictions about the
 	}
 
 \acknowledgements{	\OnePageChapter	% *MUST* BE ONLY ONE PAGE!
-Forthcoming
+None of this would have been possible without my loving family and friends. I would like to thank my labmates Joseph Mihaljevic, Sarah Orlofske,
+Sara Paull,
+Katherine Richgels,
+Travis McDevitt-Galles,
+Dan Preston,
+Miranda Redmond,
+Jazzmin Jenkins,
+Dain Calhoun,
+Will Stutz,
+Sarah Haas,
+Bethany Hoye,
+Jason Hoverman,
+Kim Medley, and
+Yuri Springer. Many faculty have been gracious with their time including Nichole Barger,
+John Basey,
+Dean Bowers,
+Kendi Davies,
+Michael Grant,
+Brett Melbourne,
+Rebecca Safran,
+Stacey Smith, and
+Carol Wessman. Many fellow students have helped me along the way as well, including Aidan Beers,
+Amanda Hund,
+Amy Churchill,
+Angela Boag,
+Caroline Tucker,
+Chris Steenbock,
+Christine Avena,
+Collin ”Schwan Quixote” Schwantes,
+David Zonana,
+Evelyn Cheng,
+Gaurav Vaidya,
+Helen McCreery,
+Jeff McClenahan,
+Joey Hubbard,
+Jon Leff,
+Jordan Keueneman,
+Julian Resasco,
+Kevin Bracy Knight,
+Kika Tarsus,
+Lauren Shoemaker,
+Lisette Arellano,
+Matt ”Marty Milkins” Wilkins,
+Megan Blanchard,
+Nathan Kleist,
+Nora Connor,
+Se Jin Song,
+Teal Potter,
+Tim Szewczyk,
+Toby Hammer,
+Topher Weiss-Lehman,
+Tim Farkas, and
+Ty Tuff.
 	}
 
 % \IRBprotocol{E927F29.001X}	% optional!
